src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --wp--preset--color--contrast: #292524;
  }

  html {
    touch-action: manipulation;
  }

  body {
    @apply overscroll-x-none;
    @apply bg-gray-100 dark:bg-black;
    @apply text-gray-800 dark:text-gray-200;
  }

  body:has(.force-light-theme) {
    @apply bg-white;
  }

  a {
    text-underline-offset: 1px;
  }

  input[type='search']::-webkit-search-cancel-button {
    -webkit-appearance: none;
    width: 18px;
    height: 18px;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23777'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
    cursor: pointer;
  }
}

@layer components {
  .btn {
    @apply h-8 px-4 inline-flex items-center justify-center;
    @apply text-sm font-sans font-medium tracking-wider bg-gray-500;
    @apply bg-opacity-10 dark:bg-opacity-25;
    @apply focus-visible:ring-2 ring-primary-500;
    @apply focus:outline-none rounded-lg subpixel-antialiased font-sans;
    @apply transition-colors duration-100 ease-in-out;
    @apply whitespace-nowrap;
  }

  .btn:not(:disabled) {
    @apply hover:bg-opacity-25 dark:hover:bg-primary-500 dark:hover:bg-opacity-25;
  }

  .btn-primary {
    @apply text-white bg-primary-500;
    @apply dark:bg-primary-900;
    @apply border-primary-500 dark:border-opacity-50;
  }

  .btn-primary:not(:disabled) {
    @apply hover:bg-primary-600 hover:bg-opacity-100;
    @apply dark:hover:bg-primary-800;
    @apply hover:border-primary-400;
  }

  .btn-patreon {
    @apply hover:bg-[#FF424D] hover:bg-opacity-25;
  }

  .select-chevron {
    @apply appearance-none bg-no-repeat;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 8'><path d='M1 1l5 5 5-5' stroke='%236b7280' stroke-width='1.5' fill='none' stroke-linecap='round'/></svg>");
    background-position: right 0.625rem center;
    background-size: 12px 8px;
  }

  .comment {
    @apply text-sm leading-snug;
  }

  .comment a {
    @apply link;
  }

  .comment p {
    @apply mb-4;
  }

  .form-field {
    @apply outline-none leading-none font-sans
      bg-white dark:bg-black focus:bg-white dark:focus:bg-black
      text-gray-500 focus:text-gray-800 dark:focus:text-gray-200
      border border-gray-300 dark:border-gray-700
      focus:border-gray-500 dark:focus:border-gray-600
      hover:border-gray-500 dark:hover:border-gray-600;
  }

  .link {
    @apply text-blue-600 dark:text-blue-400;
    @apply visited:text-purple-600 dark:visited:text-purple-400;
    @apply hover:underline active:text-red-600 dark:active:text-red-500;
  }

  .nav-bar {
    @apply flex justify-center;
  }

  @media (max-height: 600px) {
    .nav-bar {
      @apply hidden !important;
    }
  }

  .nav-link-home {
    @apply lg:hidden !important;
  }

  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  .page-heading {
    scroll-margin-top: 6rem;
    @apply font-display text-2xl md:text-4xl;
  }

  .page-wrap {
    @apply px-4 md:px-8;
  }

  .page-wrap--left {
    @apply pr-0 !important;
  }

  .page-wrap--right {
    @apply pl-0 !important;
  }

  .page-wrap--center {
    @apply mx-auto py-12 max-w-screen-lg;
  }

  /* smartphones, touchscreens */
  @media (hover: none) and (pointer: coarse) {
    .pointer-only {
      pointer-events: none;
    }
  }

  .postcard-excerpt a {
    @apply hidden;
  }

  .postcard-excerpt p,
  .postcard-excerpt div {
    @apply inline;
  }

  .header-ad-container img {
    @apply mx-auto;
  }

  .header-ad-container {
    @apply xl:py-4;
  }
}

@layer utilities {
  .text-shadow {
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }

  .text-shadow-md {
    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.08);
  }

  .text-shadow-lg {
    text-shadow: 0 15px 30px rgba(0, 0, 0, 0.11), 0 5px 15px rgba(0, 0, 0, 0.08);
  }

  .text-shadow-none {
    text-shadow: none;
  }
}

/* This needs to be outside of the @layer directive so that Tailwind doesn't strip it */
.headroom > div {
  @apply transition-shadow ease-in-out duration-500 shadow-lg;
}

.headroom--pinned > div {
  @apply shadow-xl;
}

article a {
  @apply link;
}

.wp-block-buttons:nth-child(2) .wp-block-button__link {
  @apply link p-0 bg-transparent text-base tracking-widest leading-relaxed uppercase;
  @apply text-lg font-bold;
}

